Merge latest cloud foundry uaa from master to jwt bearer branch and resolve conflicts